[project]
name = "tasukura"
version = "0.1.1"
description = "Local task management CLI for AI coding agents — track tasks and progress in SQLite"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "mixidota2" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15.0",
    "python-ulid>=3.0.0",
    "typing-extensions>=4.15.0",
    "rich>=14.0.0",
]

[project.scripts]
tk = "tasukura.cli:app"

[project.urls]
Homepage = "https://github.com/mixidota2/tasukura"
Repository = "https://github.com/mixidota2/tasukura"
Issues = "https://github.com/mixidota2/tasukura/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasukura"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "ty>=0.0.29",
]
